Collapse fixed

--- a/my-react-app/src/components/Collapse/collapse.scss
+++ b/my-react-app/src/components/Collapse/collapse.scss
@@ -47,7 +47,7 @@
         &.open{
             padding: 10px;
             transition-duration: 0.5s;
-            max-height: 10rem;
+            max-height: 1000px;
         }
     }
     
